# replit

./: .replit  next.config.js  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
attached_assets/: Pasted--I-am-building-a-SaaS-marketplace-called-BuildBidz-a-construction-procurement-platform-It-should--1757762595235_1757762595236.txt  Pasted-I-am-building-a-SaaS-marketplace-called-BuildBidz-a-construction-procurement-platform-It-should-w-1757756319273_1757756319274.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: bid-card.tsx  payment-history.tsx  project-card.tsx
client/src/components/layout/: header.tsx  sidebar.tsx
client/src/components/modals/: bid-comparison-modal.tsx  payment-modal.tsx  post-requirement-modal.tsx
client/src/hooks/: use-auth.tsx  use-websocket.tsx
client/src/lib/: auth.ts
client/src/pages/: auth.tsx  bid-comparison.tsx  dashboard.tsx  messages.tsx  post-requirement.tsx  projects.tsx  suppliers.tsx
nextjs-frontend/: package.json
nextjs-frontend/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend/components/brand/: logo.tsx
python-backend/: config.py  database.py  main.py  models.py  requirements.txt
python-backend/api/: auth.py
server/: routes.ts  storage-backup.ts  storage.ts
shared/: schema.ts
